// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshort po startu 1`] = `
<div
  className="Stopky"
>
  <div
    className="Stopky-mezera"
  >
    <span
      className="Displej__segment"
    >
      0
    </span>
    <span
      className="Displej__separator"
    >
      :
    </span>
    <span
      className="Displej__segment"
    >
      00
    </span>
    <span
      className="Displej__separator"
    >
      :
    </span>
    <span
      className="Displej__segment"
    >
      00
    </span>
    <span
      className="Displej__separator"
    >
      ,
    </span>
    <span
      className="Displej__segment"
    >
      00
    </span>
  </div>
  <div>
    <button
      accessKey="m"
      className="btn btn-info"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Mezičas (Alt-m)
    </button>
  </div>
</div>
`;

exports[`snapshot před startem 1`] = `
<div
  className="Stopky"
>
  <div
    className="Stopky-mezera"
  >
    <span
      className="Displej__segment"
    >
      -
    </span>
    <span
      className="Displej__separator"
    >
      :
    </span>
    <span
      className="Displej__segment"
    >
      --
    </span>
    <span
      className="Displej__separator"
    >
      :
    </span>
    <span
      className="Displej__segment"
    >
      --
    </span>
    <span
      className="Displej__separator"
    >
      ,
    </span>
    <span
      className="Displej__segment"
    >
      --
    </span>
  </div>
  <div>
    <button
      accessKey="m"
      className="btn btn-info"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Mezičas (Alt-m)
    </button>
  </div>
</div>
`;
